Revert "EE-6825 temproarily adding feature branch to Drone steps in order to verify build"
This reverts commit 84ce3b9f08a24b6694c0d415368112f12cb12939.

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ pipeline:
     commands:
       - docker build -t pttg-ip-smoke-tests .
     when:
-      branch: [master, EE-6825-skeleton-drone-job]
+      branch: master
       event: push
 
   install-docker-image:
@@ -21,7 +21,7 @@ pipeline:
       - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}
       - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}
     when:
-      branch: [master, EE-6825-skeleton-drone-job]
+      branch: master
       event: push
       
   tag-docker-image-with-git-tag:
