EE-6825 Temporarily making a push trigger a deployment for testing

--- a/.drone.yml
+++ b/.drone.yml
@@ -39,4 +39,4 @@ pipeline:
       - cd kube-pttg-ip-smoke-tests
       - ./deploy.sh
     when:
-      event: deployment
+      event: [deployment, push]
