--- a/build.gradle
+++ b/build.gradle
@@ -6,4 +6,7 @@ apply plugin: 'java'
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
+    testCompile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
 }
