--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
     testCompile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 }
