--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,26 @@
+plugins {
+    id 'org.springframework.boot' version '2.1.7.RELEASE'
+}
+
 repositories {
     mavenCentral()
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'io.spring.dependency-management'
 
 dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
-    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    testCompile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    testCompile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
 
     testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.9'
     testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
