--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
