--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,13 @@ targetCompatibility = 1.8
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
-    testCompile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
     testCompile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
     testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
