--- a/.drone.yml
+++ b/.drone.yml
@@ -1,35 +1,35 @@
 pipeline:
 
-  build-project:
-      image: quay.io/ukhomeofficedigital/openjdk8:v1.1.0
-      commands:
-        - ./gradlew build --max-workers 1
-      when:
-        event: [push, pull_request, tag]
-        
-  build-docker-image:
-    image: docker:17.09.1
-    environment:
-      - DOCKER_HOST=tcp://172.17.0.1:2375
-    commands:
-      - docker build -t pttg-ip-smoke-tests .
-    when:
-#      branch: master
-      event: push
-
-  install-docker-image:
-    image: docker:17.09.1
-    environment:
-      - DOCKER_HOST=tcp://172.17.0.1:2375
-    secrets:
-      - docker_password
-    commands:
-      - docker login -u="ukhomeofficedigital+pttg_ip_smoke_tests" -p=$${DOCKER_PASSWORD} quay.io
-      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}-ojr
-      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}-ojr
-    when:
-#      branch: master
-      event: push
+#  build-project:
+#      image: quay.io/ukhomeofficedigital/openjdk8:v1.1.0
+#      commands:
+#        - ./gradlew build --max-workers 1
+#      when:
+#        event: [push, pull_request, tag]
+#
+#  build-docker-image:
+#    image: docker:17.09.1
+#    environment:
+#      - DOCKER_HOST=tcp://172.17.0.1:2375
+#    commands:
+#      - docker build -t pttg-ip-smoke-tests .
+#    when:
+##      branch: master
+#      event: push
+#
+#  install-docker-image:
+#    image: docker:17.09.1
+#    environment:
+#      - DOCKER_HOST=tcp://172.17.0.1:2375
+#    secrets:
+#      - docker_password
+#    commands:
+#      - docker login -u="ukhomeofficedigital+pttg_ip_smoke_tests" -p=$${DOCKER_PASSWORD} quay.io
+#      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}-ojr
+#      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}-ojr
+#    when:
+##      branch: master
+#      event: push
 
   clone-kube-project:
     image: plugins/git
@@ -46,7 +46,7 @@ pipeline:
     environment:
       - KUBE_NAMESPACE=pttg-ip-dev
       - ENVIRONMENT=dev
-      - VERSION=build-${DRONE_BUILD_NUMBER}-ojr
+      - VERSION=build-181-ojr
       - KUBE_SERVER=https://kube-api-notprod.notprod.acp.homeoffice.gov.uk
     secrets:
       - pttg_ip_dev
