--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,19 @@ pipeline:
         - ./gradlew build --max-workers 1
       when:
         event: [push, pull_request, tag]
-        
+
+  update-semver:
+    image: quay.io/ukhomeofficedigital/docker-openjdk8-git:v1.5.0
+    secrets:
+      - github_ssh_key
+    commands:
+      - sh /root/git-utilities/set-up-github-user.sh "$${GITHUB_SSH_KEY}"
+      - ./gradlew release -Prelease.useAutomaticVersion=true -x runBuildTasks -s -i
+      - git describe --abbrev=0 --tags > ./tagSemver
+    when:
+      branch: [master]
+      event: [push]
+
   build-docker-image:
     image: docker:17.09.1
     environment:
@@ -17,19 +29,68 @@ pipeline:
       branch: master
       event: push
 
-  install-docker-image:
+  install-docker-image-with-githash-tag:
     image: docker:17.09.1
     environment:
       - DOCKER_HOST=tcp://172.17.0.1:2375
     secrets:
       - docker_password
     commands:
-      - docker login -u="ukhomeofficedigital+pttg_ip_smoke_tests" -p=$${DOCKER_PASSWORD} quay.io
+      - docker login -u="ukhomeofficedigital+pttg" -p=$${DOCKER_PASSWORD} quay.io
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:${DRONE_COMMIT_SHA:0:8}
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:${DRONE_COMMIT_SHA:0:8}
+    when:
+      event: push
+
+  install-docker-image-from-feature-branch-build:
+    image: docker:17.09.1
+    environment:
+      - DOCKER_HOST=tcp://172.17.0.1:2375
+    secrets:
+      - docker_password
+    commands:
+      - docker login -u="ukhomeofficedigital+pttg" -p=$${DOCKER_PASSWORD} quay.io
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:${DRONE_BRANCH}
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:${DRONE_BRANCH}
+    when:
+      branch:
+        exclude: master
+      event: push
+
+  install-docker-image-from-master-branch-build:
+    image: docker:17.09.1
+    environment:
+      - DOCKER_HOST=tcp://172.17.0.1:2375
+    secrets:
+      - docker_password
+    commands:
+      - docker login -u="ukhomeofficedigital+pttg" -p=$${DOCKER_PASSWORD} quay.io
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:latest
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:latest
       - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}
       - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:build-$${DRONE_BUILD_NUMBER}
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:$(cat ./tagSemver)
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:$(cat ./tagSemver)
     when:
-      branch: master
+      branch: [master]
       event: push
+
+  tag-docker-image-with-git-tag:
+    image: docker:17.09.1
+    environment:
+      - DOCKER_HOST=tcp://172.17.0.1:2375
+    secrets:
+      - docker_password
+    commands:
+      - docker login -u="ukhomeofficedigital+pttg" -p=$${DOCKER_PASSWORD} quay.io
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:$${DRONE_TAG}
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:$${DRONE_TAG}
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:${DRONE_COMMIT_SHA:0:8}
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:${DRONE_COMMIT_SHA:0:8}
+      - docker tag pttg-ip-smoke-tests quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:$(cat ./tagSemver)
+      - docker push quay.io/ukhomeofficedigital/pttg-ip-smoke-tests:$(cat ./tagSemver)
+    when:
+      event: tag
 
   clone-kube-project:
     image: plugins/git
@@ -55,3 +116,19 @@ pipeline:
     when:
       branch: master
       event: [push, tag]
+
+  deployment-to-non-prod:
+    image: quay.io/ukhomeofficedigital/kd:v1.14.0
+    environment:
+      - KUBE_NAMESPACE=pttg-ip-${DRONE_DEPLOY_TO}
+      - ENVIRONMENT=${DRONE_DEPLOY_TO}
+      - VERSION=${IMAGE_VERSION}
+      - KUBE_SERVER=https://kube-api-notprod.notprod.acp.homeoffice.gov.uk
+    secrets:
+      - pttg_ip_dev
+    commands:
+      - cd kube-pttg-ip-smoke-tests
+      - ./deploy.sh
+    when:
+      event: deployment
+      environment: [dev, test, feat1, feat2, feat3, preprod]
